# gitingest

./: README.md  pyproject.toml
src/gitingest/: __main__.py  clone.py  entrypoint.py  ingestion.py
src/gitingest/schemas/: ingestion.py
src/gitingest/utils/: git_utils.py  timeout_wrapper.py
src/server/: models.py  query_processor.py  routers_utils.py
src/server/routers/: ingest.py
src/static/: llms.txt
